# tvision-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOVER-doc.md  NOTICE  README.md
.github/scripts/: manage-doc-versions.sh
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: BACKLOG.md  HANDOVER.md  IMPLEMENTATION-LOG.md  PORT-ORDER.md  PORTING-GUIDE.md
docs/audit/: README.md  concept-coverage.md  coverage-matrix.md  gap-report.md  rustdoc-scorecard.md
docs/audit/reference/: Globals-317-330.md  Globals-331-346.md  Globals-347-362.md  Globals-363-378.md  Globals-582-586.md  PrimitiveTypes.md  TApplication.md  TBackground.md  TBufStream.md  TButton.md  TChDirDialog.md  TCheckBoxes.md  TCluster.md  TCollection.md  TColorDialog.md  TColorDisplay.md  TColorGroup.md  TColorGroupList.md  TColorIndex.md  TColorItem.md  TColorItemList.md  TColorSelector.md  TCommandSet.md  TDesktop.md  TDialog.md  TDirCollection.md  TDirEntry.md  TDirListBox.md  TDosStream.md  TDrawBuffer.md  TEditBuffer.md  TEditWindow.md  TEditor.md  TEmsStream.md  TEvent.md  TFileCollection.md  TFileDialog.md  TFileEditor.md  TFileInfoPane.md  TFileInputLine.md  (+69 more)
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md  gallery.md
docs/book/theme/: mermaid-init.js  tv.css
docs/briefs/: 2026-06-19-on-idle-seam.md  row30-tdesktop.md  row30-tile-cascade.md  row31-tprogram.md  row33-phaseA-broadcast-source.md  row33d-2-selection.md  row41-tlabel.md  row49-tmenuview.md  row50-52-menu-modal-mouse.md  row54-history-store.md  row55-history-viewer.md  row56-history-window.md  row57-thistory.md
docs/demo/: README.md
docs/design/: async-modal-from-view.md  delegation-macros.md  dialog-layout.md  fullscreen-window.md  mouse-track.md
docs/specs/: 2026-06-17-consumer-api-gaps.md
docs/superpowers/plans/: 2026-06-03-delegation-macros.md  2026-06-09-color-picker.md  2026-06-12-configurable-keymap.md  2026-06-12-developer-documentation-tooling.md  2026-06-12-docs-user-facing-cleanup.md  2026-06-15-splitter-resize-unification.md  2026-06-18-data-movement-phase2-fieldvalue-bits.md  2026-06-18-tv2-audit-gap-fixes.md  2026-06-18-tv2-guide-coverage-audit.md  2026-06-19-a-rustdoc-sweep.md  2026-06-19-b-concept-chapters.md  2026-06-19-c-observation-triage.md  2026-06-19-data-movement-phase2-fieldvalue-widen.md  2026-06-19-data-movement-phase3-sync-trait-methods.md  2026-06-19-data-movement-phase5-generic-execview.md  2026-06-26-fullscreen-r2-orthogonal.md  2026-06-30-listviewer-incremental-find.md  2026-07-01-active-aware-surfaces.md
docs/superpowers/specs/: 2026-06-09-color-picker-design.md  2026-06-12-developer-documentation-design.md  2026-06-13-splitter-design.md  2026-06-13-splitter-frame-joining-design.md  2026-06-14-splitter-resize-unification-design.md  2026-06-18-tv2-guide-coverage-audit-design.md  2026-06-18-unified-data-movement-design.md  2026-06-19-audit-doc-backlog-closure-design.md  2026-06-30-listviewer-incremental-find-design.md  2026-07-01-uniform-pane-dimming-design.md
examples/: external_state.rs  gallery.rs  hello.rs  splitter.rs  tcv.rs  tvdemo.rs  tvdir.rs  tvedit.rs
examples/gallery_fixture/: budget.csv  config.toml  notes.md  readme.md  report.txt
examples/gallery_fixture/archive/: changelog.txt
examples/gallery_fixture/images/: diagram.txt
rstv-macros/: Cargo.toml
src/: capture.rs  color.rs  command.rs  data.rs  frame.rs  help.rs  junction.rs  keymap.rs  lib.rs  text.rs  theme.rs  timer.rs  validate.rs
src/app/: application.rs  mod.rs  program.rs
src/app/snapshots/: tvision__app__program__tests__pump_renders_desktop_snapshot.snap
src/backend/: clipboard.rs  crossterm_backend.rs  headless.rs  mod.rs  quantize.rs  renderer.rs  traits.rs
src/desktop/: background.rs  desktop.rs  mod.rs
src/desktop/snapshots/: tvision__desktop__desktop__tests__desktop_render_pipeline_snapshot.snap
src/dialog/: dialog.rs  filedlg.rs  mod.rs  msgbox.rs  theme_editor.rs
src/dialog/colorpick/: drag.rs  info.rs  mod.rs  model.rs  page.rs  rgb.rs  (+3 more)
src/event/: key.rs  mod.rs
src/menu/: menu_bar.rs  menu_box.rs  menu_session.rs  menu_view.rs  mod.rs
src/screen/: buffer.rs  cell.rs  draw_buffer.rs  mod.rs  snapshot.rs
src/snapshots/: tvision__frame__tests__snapshot_active_frame.snap  tvision__frame__tests__snapshot_passive_frame.snap
src/status/: mod.rs  status_line.rs
src/view/: context.rs  geometry.rs  group.rs  id.rs  mod.rs  view.rs
src/widgets/: button.rs  cluster.rs  editor.rs  history.rs  indicator.rs  input_line.rs  list_box.rs  list_viewer.rs  mod.rs  outline.rs  page_stack.rs  scrollbar.rs  scroller.rs  static_text.rs  tab_bar.rs  terminal.rs
src/window/: mod.rs  window.rs
tests/: delegate_view.rs  render_pipeline.rs
tests/snapshots/: render_pipeline__renders_text_to_headless_snapshot.snap
tvision-macros/: Cargo.toml
tvision-macros/src/: lib.rs  specs.rs
tvision-rs-macros/: Cargo.toml
tvision-rs-macros/src/: specs.rs
xtask/: Cargo.toml
xtask/src/: ansi_html.rs  demo.rs  linkcheck.rs  main.rs  raster.rs  screens.rs  test.rs
(+95 files in other folders)
