[package]
name = "tvision"
version = "0.1.0"
edition = "2024"
description = "An idiomatic Rust port of Turbo Vision (magiblot/tvision)."
license = "MIT"
repository = "https://github.com/oetiker/rstv"
keywords = ["tui", "terminal", "turbo-vision", "widgets"]
categories = ["command-line-interface"]

# House style: consumers alias the crate as `tv` (`tv = { package = "tvision" }`)
# and reach everything through `tv::` — the path is the namespace the old `T`
# prefix was faking (PORTING-GUIDE D1).

[dependencies]
crossterm = "0.29.0"            # backend module: production terminal I/O behind the Backend trait (D11, row 19)
unicode-segmentation = "1.13.2" # text module: grapheme clustering (D13, row 8)
unicode-width = "0.2.2"         # text module: display column widths (D13, row 8)

[dev-dependencies]
insta = "1.47.2" # snapshot tests: golden-file verification (D11, row 19)
