[workspace]
members = ["rstv-macros", "xtask"]
# Plain `cargo build`/`test` (no --workspace) skips the heavy doc-tooling crate;
# `cargo test --workspace` still includes it.
default-members = [".", "rstv-macros"]

[package]
name = "rstv"
version = "0.1.0"
edition = "2024"
description = "An idiomatic Rust port of Turbo Vision (magiblot/tvision)."
license = "MIT"
repository = "https://github.com/oetiker/rstv"
homepage = "https://oetiker.github.io/rstv/"
documentation = "https://docs.rs/rstv"
readme = "README.md"
keywords = ["tui", "terminal", "turbo-vision", "widgets"]
categories = ["command-line-interface"]

# House style: consumers alias the crate as `tv` (`tv = { package = "rstv" }`)
# and reach everything through `tv::` — the path is the namespace the old `T`
# prefix was faking (PORTING-GUIDE D1).

[features]
# OS clipboard (arboard) is on by default — backlog A6 user directive. Turning
# it off leaves the OSC 52 emit + internal-buffer rungs of the clipboard chain
# (see src/backend/clipboard.rs), so minimal builds still copy on capable
# terminals.
default = ["os-clipboard"]
os-clipboard = ["dep:arboard"]

[dependencies]
# backend module: production terminal I/O behind the Backend trait (D11, row 19).
# `osc52` (additive, pulls only `base64`) provides clipboard::CopyToClipboard —
# the OSC 52 rung of the clipboard chain (backlog A6).
crossterm = { version = "0.29.0", features = ["osc52"] }
# backend module: native OS clipboard rung of the clipboard chain (backlog A6).
# default-features off drops the `image` crate (we only move text).
arboard = { version = "3.6", optional = true, default-features = false, features = ["wayland-data-control"] }
unicode-segmentation = "1.13.2" # text module: grapheme clustering (D13, row 8)
unicode-width = "0.2.2"         # text module: display column widths (D13, row 8)
rstv-macros = { path = "rstv-macros", version = "0.1.0" }
regex-automata = { version = "0.4", default-features = false, features = ["std", "syntax", "dfa-build", "dfa-search", "unicode-perl"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.4" # backend module: restore the terminal on SIGINT/SIGTERM/SIGHUP (B7 RAII lifecycle)
libc = "0.2"          # backend module: raise(SIGTSTP) for cmDosShell (C6)

[dev-dependencies]
insta = "1.47.2"      # snapshot tests: golden-file verification (D11, row 19)
