[package]
name = "tvision-macros"
version = "0.1.0"
edition = "2024"
description = "Delegation proc-macros for the tvision crate."
license = "MIT"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "3"

