[package]
name = "tvision-rs-macros"
version = "0.3.0"
edition = "2024"
description = "Delegation proc-macros for the tvision-rs crate."
license = "MIT"
repository = "https://github.com/oetiker/tvision-rs"
readme = "README.md"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "3"

